--- a/_doc/exp-html/into_sapce.html
+++ b/_doc/exp-html/into_sapce.html
@@ -54,7 +54,7 @@
 <div class="inner_onebanner"></div>
 <div class="interspace"></div>
 <div class="experience_box">
-	<h1 class="Skin_home_tittle"></h1>
+    <h1 class="Skin_home_tittle"></h1>
     <div class="experience_text">
         <h2>填写过联系方式的朋友将得到养肤团队定制专属你的私人养肤方案，以及免费的养肤秘籍哦！</h2>
         <ul class="text_method">
@@ -62,13 +62,13 @@
             <li>关注易张脸官方微信和微博，将可获得易张脸推出的100套新产品体验装中的任一一份。</li>
         </ul>
         <ul class="data">
-        	<li class="current">请先登录/注册</li>
+            <li class="current">请先登录/注册</li>
             <li>填写完整资料</li>
             <li>提交确认</li>
         </ul>
         <div class="news_box box_one">
-        	<div class="register">
-            	<table width="340" border="0" cellspacing="0" cellpadding="0" class="change_password  change_passwordbox">
+            <div class="register">
+                <table width="340" border="0" cellspacing="0" cellpadding="0" class="change_password  change_passwordbox">
                     <tr>
                         <td width="132">电子邮箱/用户名：</td>
                         <td><form>
@@ -98,10 +98,9 @@
                     </tr>
                 </table>
             </div>
-        	<div class="text">
-            	<p class="register_text">注册属于您自己的账户，成为易张脸专属会员，以便登陆查看订单状态，迅速结账等各种福利哦。</p>
-                <span class="atonce"><a href="#">马上注册 >></a></span>
-            </div>
+            <div class="text">
+                <p class="register_text">注册属于您自己的账户，成为易张脸专属会员，以便登陆查看订单状态，迅速结账等各种福利哦。</p>
+                <span class="atonce"><a href="#">马上注册 >></a></span> </div>
         </div>
     </div>
 </div>
