--- a/_doc/do/The Flowers.html
+++ b/_doc/do/The Flowers.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>易张脸</title>
 <link rel="stylesheet"type="text/css" href="css/style.css"/>
+<script src="js/jquery.js"></script>
+<style>
+.fhide{display:none;}
+</style>
 </head>
 <body>
 <div id="head">
@@ -69,7 +73,7 @@
         <div class="companynew_list">
             <h1 class="the_flower"></h1>
             <ul class="the_flower_box">
-                <li><span class="one"></span><span class="two"></span><span class="three"></span><span class="four"></span><a href="#"><img src="images/Jasmine.png" width="341" height="341"></a></li>
+                <li><span class="one"></span><span class="two"></span><span class="three"></span><span class="four"></span><a href="#"><span class="fshow"><img src="images/Jasmine.png" width="341" height="341"></span><span class="fhide"><img src="images/Jasmine_pic.png" width="341" height="341"></span></a></li>
                 <li><span class="one"></span><span class="two"></span><span class="three"></span><span class="four"></span><a href="#"><img src="images/lily_flower.png" width="167" height="341"></a></li>
                 <li><span class="one"></span><span class="two"></span><span class="three"></span><span class="four"></span><a href="#"><img src="images/rose.png" width="167" height="341"></a></li>
                 <li><span class="one"></span><span class="two"></span><span class="three"></span><span class="four"></span><a href="#"><img src="images/sakura.png" width="167" height="341"></a></li>
@@ -109,5 +113,17 @@
         </ul>
     </div>
 </div>
+<script>
+    $(function() {
+        $(".the_flower_box li").hover(function(){
+            $(this).find(".fhide").attr({style:"display:block"});
+			$(this).find(".fshow").attr({style:"display:none"});
+        },function(){
+            $(this).find(".fhide").attr({style:"display:none"});
+			$(this).find(".fshow").attr({style:"display:block"});
+        });
+        
+    });
+</script>
 </body>
 </html>
