remove privilege info

--- a/themes/yzl_v3/dc.html
+++ b/themes/yzl_v3/dc.html
@@ -65,7 +65,7 @@
 {if $submited eq 1}<a href="javascript:dialog('调查详情','iframe:vote_info.php?vote={$vote_id}&num={$sjs}','700px','550px','iframe');" style="float:right;background:red;color:#fff;font-size:13px;padding:2px;display:block;font-weight:normal;">查看结果</a>{else}<a href="javascript:alert('提交后才能查看结果！');" style="float:right;background:red;color:#fff;font-size:13px;padding:2px;display:block;font-weight:normal;">查看结果</a>{/if}
 </div>
 <div style="clear:both;"></div>
-<div style="margin:10px;font-size:14px;line-height:2;color:#666;">　　为改易张脸网站的服务质量和最佳的视觉引导，特进行有奖问卷调查，在您回答完问题后，请填写您的收货人姓名和地址。以便我们为您送出精美礼品。</div>
+<div style="margin:10px;font-size:14px;line-height:2;color:#666;">　　为改脸妆网网站的服务质量和最佳的视觉引导，特进行有奖问卷调查，在您回答完问题后，请填写您的收货人姓名和地址。以便我们为您送出精美礼品。</div>
 <div class="questionnaire">
 <!--{foreach from=$vote_arr.opt item=v name=strindex}-->
 <div class="question">
@@ -91,7 +91,7 @@
 <li><a href="javascript:void(submit_vote())" class="red"><b>提交问卷</b></a></li>
 </ul>
 </div>
-<div style="margin:10px;font-size:14px;line-height:2;color:#666;width:850px;">　　感谢您对易张脸的支持，我们将更加努力改进我们的服务质量，为感谢您的支持，我们将从数据库中找出中肯的问答者，并为您寄出精美礼物。</div>
+<div style="margin:10px;font-size:14px;line-height:2;color:#666;width:850px;">　　感谢您对脸妆网的支持，我们将更加努力改进我们的服务质量，为感谢您的支持，我们将从数据库中找出中肯的问答者，并为您寄出精美礼物。</div>
 </div>
 </div>
 </div>
